--- a/_header.tex
+++ b/_header.tex
@@ -1,4 +1,5 @@
 \useoutertheme[footline=authortitle]{miniframes}
+\usepackage{tabu}
 
 \def\begincols{\begin{columns}}
 \def\begincol{\begin{column}}
